.kitchen.cloud.yml ammended

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -7,9 +7,9 @@ driver:
   #Subnet
   subnet_id: subnet-018e9e3078d34571c
   associate_public_ip: true
-  aws_ssh_key_id: 
+  aws_ssh_key_id: DevOpsStudents
 
-    transport:
+  transport:
         #use our key from machine to access the test machine
         #ssh_key: ~/.ssh/rs-eng-42-class.pem
 
